# parser

./: .env.dist  .gitignore  main.py  pyproject.toml
app/api/: base.py  employees.py  kpi.py  premium.py  sl.py  tests.py  tutors.py
app/core/: auth.py  config.py  db.py  main.py  nats_client.py  nats_router.py
app/models/: employees.py  kpi.py  premium.py  tests.py  tutors.py
app/services/: helpers.py  logger.py  scheduler.py
app/tasks/: base.py  employees.py  kpi.py  premium.py  sl.py
app/tasks/employees/: employees.py  filters.py  utils.py
app/tasks/kpi/: kpi.py  utils.py
app/tasks/premium/: premium.py  utils.py
app/tasks/sl/: sl.py  utils.py
app/tasks/tests/: tests.py  utils.py
app/tasks/tutors/: tutors.py  utils.py
src/core/: config.py  db.py  nats_client.py  nats_router.py  ws_bridge.py
src/services/: api_tracker.py  api_wrapper.py  cli_dashboard.py  constants.py  helpers.py  logger.py  scheduler.py  scheduler_tracker.py
src/tasks/: base.py  employees.py  kpi.py  premium.py  sl.py  tests.py  tutors.py  ure.py
